cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj7_TupleStruct_1.plcfunc
FUNCTION proj7_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj7_TupleStruct_1 := tuple.field7;
END_FUNCTION
